--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"express": "^4.18.2",
 		"form-data": "^4.0.0",
 		"formidable": "^3.5.0",
-		"multer": "^1.4.5-lts.1"
+		"multer": "^1.4.5-lts.1",
+		"svelte-icons": "^2.1.0"
 	}
 }
