--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-    "start": "node build",
+		"start": "node build",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
@@ -44,6 +44,7 @@
 		"form-data": "^4.0.0",
 		"formidable": "^3.5.0",
 		"multer": "^1.4.5-lts.1",
+		"node-fetch": "^3.3.1",
 		"svelte-icons": "^2.1.0"
 	}
 }
